@@ -1,8 +1,9 @@
 1.3RC1 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
 - Fixed issue #10937: ezcDbHandler::hasFeature() is not implemented properly
   anywhere.
+- Fixed issue #10943: Add parameter to specify type of value in bindValue() and bindParam()
+
 
 1.3beta2 - Thursday 31 May 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
